# x2r

./: README.md  pyproject.toml
x2r/: __init__.py  cli.py
x2r/configs/: __init__.py  config.py
x2r/datasets/: __init__.py  dataset.py  parquet_dataset.py  shapenet_core_v2_pc15k.py
x2r/datasets/prepare/: __init__.py  cifar10.py  prepare.py  shapenet_core_v2_pc15k.py
x2r/datasets/preprocessors/: __init__.py  to_float.py
x2r/datasets/preprocessors/3d/: __init__.py  pc_downsample.py  pc_normalize.py
x2r/datasets/preprocessors/images/: resize.py
x2r/datasets/pytorch/: cifar10.py
x2r/io/: __init__.py  configs.py  filesystem.py
x2r/lr_schedulers/pytorch/: __init__.py  lr_scheduler.py
x2r/models/pytorch/: __init__.py  base_model.py  torch_model.py  torchvision_model.py
x2r/optimizers/pytorch/: __init__.py  optimizer.py
x2r/trainers/callbacks/: __init__.py  mlflow.py
x2r/trainers/pytorch/: __init__.py  config.py  trainer.py  training_loop.py
x2r/utils/: import_helper.py
