[tool.poetry]
name = "x2r"
version = "0.1.0"
description = ""
authors = ["Ming Yang <vivym@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.3.2"
ray = {extras = ["air"], version = "^2.3.1"}
opencv-python = "^4.7.0.72"
gdown = "^4.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
